# asuka

./: .gitignore  Cargo.toml  LICENSE  README.md
asuka-derive/: Cargo.toml
asuka-derive/src/: lib.rs
examples/: ayanami.grammar  group_test.grammar  hello.grammar  minic.grammar
src/: lib.rs  main.rs  runtime.rs
src/grammar/: ir.rs  mod.rs  parser.rs
src/intern/: interner.rs  mod.rs  symbol.rs
tests/: ayanami_test.rs  hello_test.rs  irnode_test.rs  minic_test.rs
