[package]
name = "asuka"
version = "0.0.1"
edition = "2021"
license = "MIT"

[[bin]]
name = "asuka"
path = "src/main.rs"

[lib]
name = "asuka"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
asuka-derive = { path = "asuka-derive" }

[build-dependencies]
# asuka-codegen will be added as workspace crate later
